# drf-study

./: .dockerignore  .envrc  .envrc.dev  .envrc.local  .envrc.prod  Dockerfile  README.md  compose.yml  docker-compose.yml  entrypoint.sh  environment.yml  environmet.yml  hello.py  pyproject.toml  requirements.txt  ruff.sh  start.sh
app/: db.sqlite3
app/config/: settings.py  urls.py
app/fafa/: apps.py
app/jjas/: apps.py
app/oi/: apps.py
app/papa/: apps.py
app/vava/: apps.py
app/zaza/: apps.py
config/: settings.py
